test/2/scope/circular-def.err
scope error: test/2/scope/circular-def.ploy:1:5-6: expected a value; `x` refers to a forward declaration.
| x = x
      ~
